menambahkan add course,menambahkan materi

--- a/assets/admin/main.css
+++ b/assets/admin/main.css
@@ -60,3 +60,15 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.errors{
+    color: red;
+    font-size: 12px;
+}
+
+.tox-notifications-container{
+    /* hidden  selain menggunakan display*/
+    visibility: hidden;
+
+
+}
